# chaoscards_deliverables

./: .gitignore  Demo Controls.md  README.md
demo/Unix/ChaosCards/: CMakeLists.txt  DataUtil.cpp  DataUtil.h  Makefile  Makefile_SkipGigl  Player.cpp  Player.h  card.generated.h  card.xc  demo_card_set_h_optimized.txt  demo_card_set_h_optimized_deck_data_active_evolved.txt  demo_card_set_h_optimized_deck_data_all_random.txt  demo_card_set_h_optimized_deck_data_skip_random.txt  main.cpp  match_deck_data_evolved.txt  match_deck_data_top_random.txt
demo/Unix/Executables/: demo_card_set_h_optimized.txt  demo_card_set_h_optimized_card_data_human_evolved.txt  demo_card_set_h_optimized_card_data_human_random.txt  demo_card_set_h_optimized_card_data_random.txt
demo/Unix/chaos_cards/: CMakeLists.txt  Makefile  Player.cpp  Player.h  card.xc  card_model.pt  card_model_train_log.txt  main.cpp  match_card_data.txt  match_card_data_bak.txt  match_card_data_human.txt  match_card_data_processed.txt  match_card_data_raw.txt  match_card_data_raw.txt_new  match_card_data_raw_bak.txt  match_deck_data.txt  match_deck_data_skip.txt  match_deck_data_top.txt  train_correlation.txt  validate_correlation.txt
demo/Windows/ChaosCards/: ChaosCards.sln
demo/Windows/ChaosCards/ChaosCards/: Player.cpp  (+20 more)
demo/Windows/Executables/: demo_card_set_h_optimized_card_data_evolved.txt  demo_card_set_h_optimized_deck_data_all_evolved.txt  demo_card_set_h_optimized_deck_data_top_random.txt  demo_card_set_h_optimized_deck_match_post_simulation.txt  styles.css
include/common/: RandConfig.cpp  RandConfig.h
(+52 files in other folders)
